--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-phone-number-input": "^3.4.12",
+    "sharp": "^0.34.3",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
