--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
+    "i": "^0.3.7",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
+    "npm": "^11.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
