--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
+    "googleapis": "^167.0.0",
     "i": "^0.3.7",
     "lucide-react": "^0.542.0",
     "next": "15.4.6",
